# digital-assets

./: .env-sample  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
jobs/: dummy.py  email_dummy.py
process/: __init__.py
research/notebooks/: backtesting.ipynb  backtesting2.ipynb  binance_import.ipynb  bybit_import.ipynb  check_data.ipynb  check_oscillator_strategy.ipynb  dydx_import.ipynb  dydx_markets.ipynb  hyperliquid_btc_analysis.ipynb  hyperliquid_import.ipynb  hyperliquid_markets.ipynb  hyperliquid_trend_new.ipynb  import_parquet.ipynb  kraken_import.ipynb  okx_import.ipynb  test_write_df.ipynb
sql/: init_instruments.sql  seed_binance_spot.sql  seed_bybit_spot.sql  seed_dydx_perp.sql  seed_hyperliquid_perp.sql  seed_okx_spot.sql
src/: backtesting_engine.py  backtesting_engine_with_risk.py  risk_manager.py  symbol_map.py
src/clients/: __init__.py  bybit_client.py  db_client.py  dydx_client.py  hyperliquid_client.py  kraken_csv_client.py  okx_client.py
src/models/: __init__.py  backtesting_models.py  risk_manager_models.py
src/strats/: __init__.py  aggressive_ict_strategy.py  ict_hyperliquid_strategy.py  trend_following_strategy.py  trend_following_strategy_v2.py
src/utils/: logger.py  misc.py
